--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "private/class/BluffingoCore"]
 	path = private/class/BluffingoCore
 	url = https://github.com/bluffingo/BluffingoCore
+[submodule "private/skins/trinium/scss"]
+	path = private/skins/trinium/scss
+	url = https://github.com/bluffingo/trinium.git
